force-app/main/default/objects/Excursion__c/Excursion__c.object-meta.xml
<CustomObject>
    <description>Excursion</description>
    <label>Excursion</label>
    <nameField>
        <label>Excursion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Excursions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>