force-app/main/default/objects/Excursion__c/fields/BeginDate__c.field-meta.xml
<CustomField>
    <fullName>BeginDate__c</fullName>
    <description>Excursion begin date</description>
    <label>Begin Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>