force-app/main/default/objects/Excursion__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the excursion</description>
    <label>Description</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>