force-app/main/default/objects/Excursion__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Duration (hours)</description>
    <label>Duration</label>
    <required>true</required>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>